fixed button positioning on mobile

--- a/timer/style.css
+++ b/timer/style.css
@@ -294,7 +294,7 @@ h2 {
     background-color: #111;
     border: 2px solid #0f0;
     padding: 1em;
-    width: clamp(6cm, 50vw, 100cm);
+    width: clamp(9cm, 50vw, 100cm);
     max-height: 90%;
     overflow: hidden;
     position: relative;
@@ -313,8 +313,8 @@ h2 {
 
 .btn-container {
     position:absolute;
-    bottom: 10%;
-    left:95%;
+    bottom: 5%;
+    right:1%;
     display: flex;
     flex-direction: column;
 }
